--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                   <h3>Romain Hoogmed</h3>
                   <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
                </div>
-               <div class="social-icons col-xs-12 col-md-12 col-md-12">
+               <div class="social-icons col-xs-12 col-md-12">
                   <a href="http://www.facebook.com" target="_blank">
                   <span class="icon twitter"></span>
                   </a>
@@ -700,13 +700,33 @@
     <div class="container-fluid contactus">
       <div class="row contactrow">
         <p class="contact col-md-2 col-md-offset-1">Contact</p>
-        <p class="col-md-offset-2 col-md-7 numbers">Mobile: 8975532535</p>
+        <p class="col-md-offset-2 col-md-4 col-sm-12 col-xs-12 numbers"><img src="assets/contact_phone.svg" class="contact_icon"> +918975532535</p>
+        <p class=" col-md-offset-5 col-md-4 col-sm-12 col-xs-12 numbers"><img src="assets/contact_mail.svg" class="contact_icon"> info@jschannel.com</p>
       </div>
       <div class="row">
         <p class="col-md-5 col-md-offset-5 copyright">Copyright © JSchannel 2013-2017</p>
       </div>
       <div class="row">
         <p class="col-md-3 col-md-offset-5 copyright">Code of Conduct</p>
+      </div>
+      <div class="row">
+        <div class="social-icons col-xs-12 col-md-4">
+           <a href="https://www.facebook.com/javascriptchannel" target="_blank">
+           <span class="icon facebook"></span>
+           </a>
+           <a href="https://twitter.com/js_channel/" target="_blank">
+           <span class="icon twitter"></span>
+           </a>
+           <a href="https://plus.google.com/111069083279946389343/" target="_blank">
+           <span class="icon google"></span>
+           </a>
+           <a href="http://confreaks.tv/events/jschannelconf2015" target="_blank">
+           <span class="icon youtube"></span>
+           </a>
+           <a href="https://www.flickr.com/photos/100543192@N08/albums/with/72157656673572946" target="_blank">
+           <span class="icon flickr"></span>
+           </a>
+        </div>
       </div>
     </div>
   </footer>
