--- a/index.html
+++ b/index.html
@@ -267,105 +267,122 @@
          <div class="row">
             <div class="speaker col-xs-12 col-md-4 col-sm-4">
                <div class="col-md-6 col-md-offset-0 col-xs-6 col-xs-offset-3">
-                  <img src="https://randomuser.me/api/portraits/men/83.jpg" class="img-circle img-responsive">
+                  <img src="assets/andrew.jpg" class="img-circle img-responsive">
                </div>
                <div class="bio col-md-6 col-sm-12 col-xs-12">
-                  <h3>Romain Hoogmed</h3>
-                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
+                  <h3>Andrew Clark</h3>
+                  <p>Front-end engineer. @reactjs core team at Facebook. Co-creator of Redux. Creator of Recompose. Hi!</p>
                </div>
                <div class="social-icons col-xs-12 col-md-12">
-                  <a href="http://www.facebook.com" target="_blank">
+                  <a href="https://twitter.com/acdlite" target="_blank">
                   <span class="icon twitter"></span>
                   </a>
-                  <a href="http://www.facebook.com" target="_blank">
+                  <a href="https://github.com/acdlite" target="_blank">
                   <span class="icon github"></span>
                   </a>
                </div>
             </div>
             <div class="speaker col-xs-12 col-md-4 col-sm-4">
                <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
-                  <img src="https://randomuser.me/api/portraits/women/83.jpg" class="img-circle img-responsive">
+                  <img src="assets/preethi.jpeg" class="img-circle img-responsive">
                </div>
                <div class="bio col-md-6 col-xs-12">
-                  <h3>Romain Hoogmed</h3>
-                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
+                  <h3>Preethi Kasireddy</h3>
+                  <p>Software Eng hacking on bots. Previously @a16z and @GoldmanSachs. I'm passionate about JS, FP, physical training, learning excessively, writing and reading.</p>
                </div>
                <div class="social-icons col-xs-12 col-md-12">
-                  <a href="http://www.facebook.com" target="_blank">
+                 <a href="https://www.linkedin.com/in/preethi-kasireddy-41383528/" target="_blank">
+                 <span class="icon linkedin"></span>
+                 </a>
+                  <a href="https://twitter.com/iam_preethi" target="_blank">
                   <span class="icon twitter"></span>
                   </a>
-                  <a href="http://www.facebook.com" target="_blank">
+                  <a href="https://github.com/iam-peekay" target="_blank">
                   <span class="icon github"></span>
                   </a>
                </div>
             </div>
             <div class="speaker col-xs-12 col-md-4 col-sm-4">
                <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
-                  <img src="https://randomuser.me/api/portraits/men/28.jpg" class="img-circle img-responsive">
+                  <img src="assets/sarah.jpg" class="img-circle img-responsive">
                </div>
                <div class="bio col-md-6 col-xs-12">
-                  <h3>Romain Hoogmed</h3>
-                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
-                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
+                  <h3>Sarah Drasner</h3>
+                  <p>Award-winning speaker. Consultant. Writer @Real_CSS_Tricks. Cofounder, https://webanimationworkshops.com/ , formerly @trulia (Zillow). http://codepen.io/sdras/ </p>
                </div>
                <div class="social-icons col-xs-12 col-md-12">
-                  <a href="http://www.facebook.com" target="_blank">
+                 <a href="https://www.linkedin.com/in/sarahdrasner/" target="_blank">
+                 <span class="icon linkedin"></span>
+                 </a>
+                  <a href="https://twitter.com/sarah_edo" target="_blank">
                   <span class="icon twitter"></span>
                   </a>
-                  <a href="http://www.facebook.com" target="_blank">
+                  <a href="https://github.com/sdras" target="_blank">
                   <span class="icon github"></span>
                   </a>
                </div>
             </div>
+
+
          </div>
          <div class="row">
+           <div class="speaker col-xs-12 col-md-4 col-sm-4">
+              <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+                 <img src="assets/franziska.jpg" class="img-circle img-responsive">
+              </div>
+              <div class="bio col-md-6 col-xs-12">
+                 <h3>Franziska Hinkelmann</h3>
+                 <p>Ph.D software engineer working on Chrome V8. Love JavaScript. Node.js collaborator.</p>
+              </div>
+              <div class="social-icons col-xs-12 col-md-12">
+                <a href="https://www.linkedin.com/in/fhinkel/" target="_blank">
+                <span class="icon linkedin"></span>
+                </a>
+                 <a href="https://twitter.com/fhinkel" target="_blank">
+                 <span class="icon twitter"></span>
+                 </a>
+                 <a href="https://github.com/fhinkel" target="_blank">
+                 <span class="icon github"></span>
+                 </a>
+              </div>
+           </div>
+
             <div class="speaker col-xs-12 col-md-4 col-sm-4">
                <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
-                  <img src="https://randomuser.me/api/portraits/men/31.jpg" class="img-circle img-responsive">
+                  <img src="assets/parshuram.jpeg" class="img-circle img-responsive">
                </div>
                <div class="bio col-md-6 col-xs-12">
-                  <h3>Romain Hoogmed</h3>
-                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
+                  <h3>Parashuram N</h3>
+                  <p>Developer, Serial Hacker, Midnight Dog walker</p>
                </div>
                <div class="social-icons col-xs-12 col-md-12">
-                  <a href="http://www.facebook.com" target="_blank">
+                 <a href="https://www.linkedin.com/in/axemclion/" target="_blank">
+                 <span class="icon linkedin"></span>
+                 </a>
+                  <a href="https://twitter.com/nparashuram" target="_blank">
                   <span class="icon twitter"></span>
                   </a>
-                  <a href="http://www.facebook.com" target="_blank">
+                  <a href="https://github.com/axemclion" target="_blank">
                   <span class="icon github"></span>
                   </a>
                </div>
             </div>
             <div class="speaker col-xs-12 col-md-4 col-sm-4">
                <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
-                  <img src="https://randomuser.me/api/portraits/women/37.jpg" class="img-circle img-responsive">
+                  <img src="assets/max.jpg" class="img-circle img-responsive">
                </div>
                <div class="bio col-md-6 col-xs-12">
-                  <h3>Romain Hoogmed</h3>
-                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
+                  <h3>Max Stoiber</h3>
+                  <p>Makes styled-components, react-boilerplate, @KeystoneJS and CarteBlanche. Open source developer @thethinkmill.Speciality coffee geek, skier, traveller.</p>
                </div>
                <div class="social-icons col-xs-12 col-md-12">
-                  <a href="http://www.facebook.com" target="_blank">
+                 <a href="https://www.linkedin.com/in/max-stoiber-46698678/" target="_blank">
+                 <span class="icon linkedin"></span>
+                 </a>
+                  <a href="https://twitter.com/mxstbr" target="_blank">
                   <span class="icon twitter"></span>
                   </a>
-                  <a href="http://www.facebook.com" target="_blank">
-                  <span class="icon github"></span>
-                  </a>
-               </div>
-            </div>
-            <div class="speaker col-xs-12 col-md-4 col-sm-4">
-               <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
-                  <img src="https://randomuser.me/api/portraits/men/67.jpg" class="img-circle img-responsive">
-               </div>
-               <div class="bio col-md-6 col-xs-12">
-                  <h3>Romain Hoogmed</h3>
-                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
-               </div>
-               <div class="social-icons col-xs-12 col-md-12">
-                  <a href="http://www.facebook.com" target="_blank">
-                  <span class="icon twitter"></span>
-                  </a>
-                  <a href="http://www.facebook.com" target="_blank">
+                  <a href="https://github.com/mxstbr" target="_blank">
                   <span class="icon github"></span>
                   </a>
                </div>
