Update speaker's and buy tickets

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <h2 class="heading">Two Days of Learning!</h2>
       </div>
       <div class="col-md-12">
-        <p class="subtitle"> join us for an opportuity to learn and hear from the best brains in the industry </p>
+        <p class="subtitle">Join us for an opportuity to learn and hear from the best brains in the industry </p>
       </div>
     </div>
 
@@ -205,9 +205,11 @@
             <span class="price-text">₹</span>
             <span class="price-text">3000</span>
           </div>
+          <a href="https://www.townscript.com/e/jschannel-2017-013314/booking" target="_blank">
           <div class="btn price-btn">
             <span>BUY NOW</span>
           </div>
+          </a>
         </div>
         <div class="col-md-4 tickets-types-col">
           <div class="text">EARLY BIRD</div>
@@ -215,9 +217,11 @@
             <span class="price-text">₹</span>
             <span class="price-text">4500</span>
           </div>
-          <div class="btn price-btn" disabled="disabled">
+          <a href="https://www.townscript.com/e/jschannel-2017-013314/booking" target="_blank">
+          <div class="btn price-btn">
             <span>BUY NOW</span>
           </div>
+          </a>
         </div>
         <div class="col-md-4 tickets-types-col">
           <div class="text">JS ENTHUSIAST</div>
@@ -225,14 +229,16 @@
             <span class="price-text">₹</span>
             <span class="price-text">6000</span>
           </div>
-          <div class="btn price-btn" disabled="disabled">
+          <a href="https://www.townscript.com/e/jschannel-2017-013314/booking" target="_blank">
+          <div class="btn price-btn">
             <span>BUY NOW</span>
           </div>
+          </a>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12 text-center">
-          <span class="few-seats">*Only few seats left. Closing on 20 Jan</span>
+          <!--<span class="few-seats">*Only few seats left. Closing on 20 Jan</span>-->
         </div>
       </div>
     </div>
@@ -308,7 +314,7 @@
                </div>
                <div class="bio col-md-6 col-xs-12">
                   <h3>Sarah Drasner</h3>
-                  <p>Award-winning speaker. Consultant. Writer @Real_CSS_Tricks. Cofounder, https://webanimationworkshops.com/ , formerly @trulia (Zillow). http://codepen.io/sdras/ </p>
+                  <p>Award-winning speaker. Consultant. Writer @Real_CSS_Tricks. Cofounder, <a href="https://webanimationworkshops.com/" target="_blank">https://webanimationworkshops.com/</a> , formerly @trulia (Zillow). <a href="http://codepen.io/sdras/" target="_blank">http://codepen.io/sdras/</a> </p>
                </div>
                <div class="social-icons col-xs-12 col-md-12">
                  <a href="https://www.linkedin.com/in/sarahdrasner/" target="_blank">
@@ -717,8 +723,8 @@
     <div class="container-fluid contactus">
       <div class="row contactrow">
         <p class="contact col-md-2 col-md-offset-1">Contact</p>
-        <p class="col-md-offset-2 col-md-4 col-sm-12 col-xs-12 numbers"><img src="assets/contact_phone.svg" class="contact_icon"> +918975532535</p>
-        <p class=" col-md-offset-5 col-md-4 col-sm-12 col-xs-12 numbers"><img src="assets/contact_mail.svg" class="contact_icon"> info@jschannel.com</p>
+        <p class="col-md-offset-2 col-md-4 col-sm-12 col-xs-12 numbers"><img src="assets/contact_phone.svg" class="contact_icon"> <a href="tel:+918975532535">+91-89 7553 2535</a></p>
+        <p class=" col-md-offset-5 col-md-4 col-sm-12 col-xs-12 numbers"><img src="assets/contact_mail.svg" class="contact_icon"><a href="mailto:info@jschannel.com?Subject=Hey%20JSChannel%20Team"> info@jschannel.com</a></p>
       </div>
       <div class="row">
         <p class="col-md-5 col-md-offset-5 copyright">Copyright © JSchannel 2013-2017</p>
