Correction in spellings and number

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <li><a class="visible" href="">SPEAKERS</a></li>
           <li><a class="visible" href="">SCHEDULE</a></li>
           <li><a href="#venue">VENUE</a></li>
-          <li><a class="visible" href="">SPONSERS</a></li>
+          <li><a class="visible" href="">SPONSORS</a></li>
           <li><a href="#gallery">GALLERY</a></li>
           <li><a href="#tickets" class="btn button-buy-ticket"><span>BUY TICKETS</span></a></li>
         </ul>
@@ -144,7 +144,7 @@
         <!-- sponsor row -->
         <div class="col-md-offset-0 col-md-6 col-sm-offset-1 col-sm-10 col-xs-12">
           <div class="cfp">
-            <a href="assets/sponsorship-flyer.pdf" target="_blank" class="text">Become A Sponser</a>
+            <a href="assets/sponsorship-flyer.pdf" target="_blank" class="text">Become A Sponsor</a>
           </div>
         </div>
       </div>
@@ -181,7 +181,7 @@
       <div class="col-md-2 col-xs-12 text-center description_content">
         <img class="description_box_icon" src="assets/ico-food.png" alt="speakerphone">
         <h2 class="description_box_title">Fabulous Food</h2>
-        <p class="description_box_subtitle"> Enjoy sumptious cuisine prepared by one of the best restaurants in Bengaluru </p>
+        <p class="description_box_subtitle"> Enjoy sumptuous cuisine prepared by one of the best restaurants in Bengaluru </p>
       </div>
       <div class="col-md-2 col-xs-12 text-center description_content">
         <img class="description_box_icon" src="assets/ico-venue.png" alt="speakerphone">
@@ -723,7 +723,7 @@
     <div class="container-fluid contactus">
       <div class="row contactrow">
         <p class="contact col-md-2 col-md-offset-1">Contact</p>
-        <p class="col-md-offset-2 col-md-4 col-sm-12 col-xs-12 numbers"><img src="assets/contact_phone.svg" class="contact_icon"> <a href="tel:+918975532535">+91-89 7553 2535</a></p>
+        <p class="col-md-offset-2 col-md-4 col-sm-12 col-xs-12 numbers"><img src="assets/contact_phone.svg" class="contact_icon"> <a href="tel:+919025328198">+91-90 2532 8198</a></p>
         <p class=" col-md-offset-5 col-md-4 col-sm-12 col-xs-12 numbers"><img src="assets/contact_mail.svg" class="contact_icon"><a href="mailto:info@jschannel.com?Subject=Hey%20JSChannel%20Team"> info@jschannel.com</a></p>
       </div>
       <div class="row">
