--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
         <p class="col-md-5 col-md-offset-5 copyright">Copyright © JSchannel 2013-2017</p>
       </div>
       <div class="row">
-        <p class="col-md-3 col-md-offset-5 copyright">Code of Conduct</p>
+        <!--<p class="col-md-3 col-md-offset-5 copyright">Code of Conduct</p>-->
       </div>
       <div class="row">
         <div class="social-icons col-xs-12 col-md-4">
