--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
         <span class="text">Recap 2016</span>
       </div>
     </div> -->
-
     <!-- sponsor row -->
     <div class="col-md-offset-0 col-md-6 col-sm-offset-1 col-sm-10 col-xs-12">
       <div class="cfp">
@@ -273,7 +272,7 @@
           <a href="https://www.linkedin.com/in/sarahdrasner/" target="_blank">
             <span class="icon linkedin"></span>
           </a>
-          <a href="https://twitter.com/sarah_edo" target="_blank">
+          <a target="_blank" href="https://twitter.com/sarah_edo" target="_blank">
             <span class="icon twitter"></span>
           </a>
           <a href="https://github.com/sdras" target="_blank">
@@ -314,7 +313,7 @@
           <a href="https://www.linkedin.com/in/fhinkel/" target="_blank">
             <span class="icon linkedin"></span>
           </a>
-          <a href="https://twitter.com/fhinkel" target="_blank">
+          <a target="_blank" href="https://twitter.com/fhinkel" target="_blank">
             <span class="icon twitter"></span>
           </a>
           <a href="https://github.com/fhinkel" target="_blank">
@@ -335,7 +334,7 @@
           <a href="https://www.linkedin.com/in/axemclion/" target="_blank">
             <span class="icon linkedin"></span>
           </a>
-          <a href="https://twitter.com/nparashuram" target="_blank">
+          <a target="_blank" href="https://twitter.com/nparashuram" target="_blank">
             <span class="icon twitter"></span>
           </a>
           <a href="https://github.com/axemclion" target="_blank">
@@ -798,5 +797,4 @@
 
     </script>
 </body>
-
 </html>
