--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="description" content="JSChannel Conference brings together JavaScript Enthusiasts from across the world.This July (28-29th), join us for a 2-day conference in Bengaluru">
-  <meta property="og:title" content="JSChannel Conference">
+  <meta property="og:title" content="JSChannel Conference 2017">
   <meta property="og:url" content="http://2017.jschannel.com">
   <meta property="og:type" content="website">
-  <meta property="og:description" content="JSChannel Conference brings together JavaScript Enthusiasts from across the world.This July (15-16th), join us for a 2-day conference in Bengaluru">
-  <meta property="og:image" content="http://photos1.meetupstatic.com/photos/event/2/7/e/a/highres_446890218.jpeg">
+  <meta property="og:description" content="JSChannel Conference brings together JavaScript Enthusiasts from across the world.This July (28-29th), join us for a 2-day conference in Bengaluru">
+  <meta property="og:image" content="https://pbs.twimg.com/profile_images/822154908711292928/SRRFsZPO.jpg">
   <meta property="og:twitter" content="@js_channel">
   <meta property="og:site" content="@js_channel">
   <meta property="og:author" content="JSChannel">
