Add tshirt in info

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
   </div>
 
   <div class="row description_box">
-    <div class="col-md-2 col-xs-12 col-md-offset-1 text-center description_content">
+    <div class="col-md-2 col-xs-12 text-center description_content">
       <img class="description_box_icon" src="assets/shape-1.png" alt="speakerphone">
       <h2 class="description_box_title"> Date </h2>
       <p class="description_box_subtitle"> 28 - 29th July </p>
@@ -389,6 +389,11 @@
       <img class="description_box_icon" src="assets/ico-food.png" alt="speakerphone">
       <h2 class="description_box_title">Fabulous Food</h2>
       <p class="description_box_subtitle"> Enjoy sumptuous cuisine prepared by one of the best restaurants in Bengaluru </p>
+    </div>
+    <div class="col-md-2 col-xs-12 text-center description_content">
+      <img class="description_box_icon" src="assets/ico-tshirt.png" alt="speakerphone">
+      <h2 class="description_box_title">JSChannel Tshirt</h2>
+      <p class="description_box_subtitle">Get beautifully designed tshirt and wear the JS experience</p>
     </div>
     <div class="col-md-2 col-xs-12 text-center description_content">
       <img class="description_box_icon" src="assets/ico-venue.png" alt="speakerphone">
