--- a/emailer/index.html
+++ b/emailer/index.html
@@ -150,7 +150,7 @@
     }
 
     .social-icons {
-        text-align: end;
+        text-align: center;
     }
 
     .social-icons .icon {
@@ -298,16 +298,16 @@
     </div>
     <footer class="darkBg whiteColor centerText">
         <div class="row contactrow">
-            <p class="contact col-md-2 col-md-offset-1">Contact</p>
-            <p class="col-md-offset-2 col-md-4 col-sm-12 col-xs-12 numbers"><img src="../assets/contact_phone.svg" class="contact_icon"> <a href="tel:+919025328198">+91-90 2532 8198</a></p>
-            <p class=" col-md-offset-5 col-md-4 col-sm-12 col-xs-12 numbers"><img src="../assets/contact_mail.svg" class="contact_icon"><a href="mailto:info@jschannel.com?Subject=Hey%20JSChannel%20Team"> info@jschannel.com</a></p>
+            <h2 class="primaryColor">Contact</h2>
+            <p class="col-md-offset-4 col-md-4 numbers"><img src="../assets/contact_phone.svg" class="contact_icon"> <a href="tel:+919025328198">+91-90 2532 8198</a></p>
+            <p class="col-md-offset-4 col-md-4 numbers"><img src="../assets/contact_mail.svg" class="contact_icon"><a href="mailto:info@jschannel.com?Subject=Hey%20JSChannel%20Team"> info@jschannel.com</a></p>
         </div>
         <div class="row">
-            <p class="col-md-5 col-md-offset-5 copyright primaryColor">Copyright © JSchannel 2013-2017</p>
+            <p class="col-md-offset-4 col-md-4 numbers copyright primaryColor">Copyright © JSchannel 2013-2017</p>
         </div>
         <div class="row">
             <h5>Follow us to keep updated yourself</h5>
-            <div class="social-icons col-xs-12 col-md-4">
+            <div class="social-icons col-xs-12 col-md-4 col-md-offset-4">
                 <a href="https://www.facebook.com/javascriptchannel" target="_blank">
                     <span class="icon facebook"></span>
                 </a>
