change author content from name to JSChannel team

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <title>JSChannel Conference - July 28-29th 2017 - Bangalore, India</title>
   <meta name="keywords" content="javascript,jschannel,javascript conference, Bengaluru,community,conference,NCR,jsconference,angularJS,nodeJS,angularjs,emberjs,ecmascript,iojs,hapijs,expressjs">
-  <meta name="author" content="Pranam, Prakhar, Vatsalya, Himanshu Singh, Mahesh Haldar">
+  <meta name="author" content="JSChannel Team">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#FFD527">
   <meta name="msapplication-navbutton-color" content="#FFD527">
