--- a/index.html
+++ b/index.html
@@ -365,6 +365,32 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="speaker col-xs-12 col-md-4 col-sm-4">
+        <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+          <img src="assets/tyler.jpg" class="img-circle img-responsive">
+        </div>
+        <div class="bio col-md-6 col-xs-12">
+          <h3>Tyler McGinnis</h3>
+          <p>
+             Developer Expert <a href="https://twitter.com/google" target="_blank">@google</a>
+            Partner <a href="https://twitter.com/reactjstraining" target="_blank">@reactjstraining</a> and React Newsletter</p>
+        </div>
+        <div class="social-icons col-xs-12 col-md-12">
+          <a href="https://www.linkedin.com/in/tylermcginnis33/" target="_blank">
+            <span class="icon linkedin"></span>
+          </a>
+          <a target="_blank" href="https://twitter.com/tylermcginnis33" target="_blank">
+            <span class="icon twitter"></span>
+          </a>
+          <a href="https://github.com/tylermcginnis" target="_blank">
+            <span class="icon github"></span>
+          </a>
+        </div>
+      </div>
+
+
+    </div>
     <div class="container-margin-bottom"></div>
   </div>
   <div class="container description">
