--- a/index.html
+++ b/index.html
@@ -163,26 +163,27 @@
         <div class="col-md-4 tickets-types-col">
           <div class="text">SUPER EARLY BIRD</div>
           <div class="price-box">
-            <span class="price-text">₹</span>
-            <span class="price-text">3000</span>
+            <span class="price-text disabled">₹</span>
+            <span class="price-text disabled">3000</span>
+          </div>
+            <div class="btn price-btn disabled">
+              <span>SOLD OUT</span>
+            </div>
+        </div>
+        <div class="col-md-4 tickets-types-col">
+          <div class="text">EARLY BIRD</div>
+          <div class="price-box">
+            <span class="price-text ">₹</span>
+            <span class="price-text ">4500</span>
           </div>
           <a href="https://www.townscript.com/e/jschannel-2017-013314/booking" target="_blank">
             <div class="btn price-btn">
               <span>BUY NOW</span>
             </div>
           </a>
-        </div>
-        <div class="col-md-4 tickets-types-col">
-          <div class="text">EARLY BIRD</div>
-          <div class="price-box">
-            <span class="price-text disabled">₹</span>
-            <span class="price-text disabled">4500</span>
+          <div>
+            <i>(20% discount on group of 5 or more)</i>
           </div>
-          <a target="_blank">
-            <div class="btn price-btn disabled">
-              <span>BUY NOW</span>
-            </div>
-          </a>
         </div>
         <div class="col-md-4 tickets-types-col">
           <div class="text">JS ENTHUSIAST</div>
