--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
   <!-- submit row -->
   <div class="row links">
     <div class="col-md-offset-0 col-md-6 col-sm-offset-1 col-sm-10 col-xs-12">
-      <div class="cfp disabled">
-        <span class="text">Submit CFP <span class="small-text">(Coming Soon)</span></span>
+      <div class="cfp">
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScK6RJXoTGDkvReyGNAIiRHLoC23cKqp0wfsRywAa6pEhmVSQ/viewform" target="_blank"><span class="text">Submit CFP <span class="small-text"></span></span></a>
       </div>
     </div>
 
