--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
   <div class="row links">
     <div class="col-md-offset-0 col-md-6 col-sm-offset-1 col-sm-10 col-xs-12">
       <div class="cfp">
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLScK6RJXoTGDkvReyGNAIiRHLoC23cKqp0wfsRywAa6pEhmVSQ/viewform" target="_blank"><span class="text">Submit CFP <span class="small-text"></span></span></a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScK6RJXoTGDkvReyGNAIiRHLoC23cKqp0wfsRywAa6pEhmVSQ/viewform" target="_blank"><span class="text">Submit CFP(Closes on 5th June,  2017)
+          <span class="small-text"></span></span></a>
       </div>
     </div>
 
