disable early bird and fix CFP font size

--- a/index.html
+++ b/index.html
@@ -131,8 +131,12 @@
   <div class="row links">
     <div class="col-md-offset-0 col-md-6 col-sm-offset-1 col-sm-10 col-xs-12">
       <div class="cfp">
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLScK6RJXoTGDkvReyGNAIiRHLoC23cKqp0wfsRywAa6pEhmVSQ/viewform" target="_blank"><span class="text">Submit CFP(Closes on 5th June,  2017)
-          <span class="small-text"></span></span></a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScK6RJXoTGDkvReyGNAIiRHLoC23cKqp0wfsRywAa6pEhmVSQ/viewform" target="_blank">
+          <span class="text">
+            Submit CFP
+            <span class="small-text">(Closes on 5th June,  2017)</span>
+          </span>
+        </a>
       </div>
     </div>
 
@@ -174,29 +178,27 @@
         <div class="col-md-4 tickets-types-col">
           <div class="text">EARLY BIRD</div>
           <div class="price-box">
-            <span class="price-text ">₹</span>
-            <span class="price-text ">4500</span>
+            <span class="price-text disabled">₹</span>
+            <span class="price-text disabled">4500</span>
+          </div>
+          <div class="btn price-btn disabled">
+            <span>SOLD OUT</span>
+          </div>
+        </div>
+        <div class="col-md-4 tickets-types-col">
+          <div class="text">JS ENTHUSIAST</div>
+          <div class="price-box">
+            <span class="price-text">₹</span>
+            <span class="price-text">6000</span>
           </div>
           <a href="https://www.townscript.com/e/jschannel-2017-013314/booking" target="_blank">
             <div class="btn price-btn">
               <span>BUY NOW</span>
             </div>
           </a>
-          <div>
+          <div class="margin-tb10">
             <i>(20% discount on group of 5 or more)</i>
           </div>
-        </div>
-        <div class="col-md-4 tickets-types-col">
-          <div class="text">JS ENTHUSIAST</div>
-          <div class="price-box">
-            <span class="price-text disabled">₹</span>
-            <span class="price-text disabled">6000</span>
-          </div>
-          <a target="_blank">
-            <div class="btn price-btn disabled">
-              <span>BUY NOW</span>
-            </div>
-          </a>
         </div>
       </div>
       <div class="row">
