Disable button to close CFP

--- a/index.html
+++ b/index.html
@@ -130,11 +130,10 @@
   <!-- submit row -->
   <div class="row links">
     <div class="col-md-offset-0 col-md-6 col-sm-offset-1 col-sm-10 col-xs-12">
-      <div class="cfp">
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLScK6RJXoTGDkvReyGNAIiRHLoC23cKqp0wfsRywAa6pEhmVSQ/viewform" target="_blank">
+      <div class="cfp disabled">
+        <a href="" target="_blank">
           <span class="text">
-            Submit CFP
-            <span class="small-text">(Closes on 5th June,  2017)</span>
+            CFP Closed on 5th June
           </span>
         </a>
       </div>
