fix: replace classname visible with hidden for clear semantics

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse navbar-right">
         <ul class="nav navbar-nav">
-          <li><a class="visible" href="">SPEAKERS</a></li>
-          <li><a class="visible" href="">SCHEDULE</a></li>
+          <li><a class="hidden" href="">SPEAKERS</a></li>
+          <li><a class="hidden" href="">SCHEDULE</a></li>
           <li><a href="#venue">VENUE</a></li>
-          <li><a class="visible" href="">SPONSORS</a></li>
+          <li><a class="hidden" href="">SPONSORS</a></li>
           <li><a href="#gallery">GALLERY</a></li>
           <li><a href="#tickets" class="btn button-buy-ticket"><span>BUY TICKETS</span></a></li>
         </ul>
@@ -205,7 +205,7 @@
     </div>
   </div>
 
-  <div class="container hackathon visible">
+  <div class="container hackathon hidden">
     <div class="row">
       <div class="col-md-12 text-center title-gutter">
         <span class="title">Hackathon</span>
@@ -438,7 +438,7 @@
     </div>
   </div>
 
-  <div class="container sponsors visible">
+  <div class="container sponsors hidden">
     <div class="row">
       <div class="col-md-12 text-center title-gutter">
         <span class="title">Our Sponsors</span>
@@ -462,7 +462,7 @@
     </div>
   </div>
 
-  <div class="container partners visible">
+  <div class="container partners hidden">
     <div class="row">
       <div class="col-md-12 text-center title-gutter">
         <span class="title">Our Partners</span>
@@ -478,7 +478,7 @@
     </div>
   </div>
 
-  <div class="container-fluid schedule visible">
+  <div class="container-fluid schedule hidden">
     <div class="row">
       <div class="col-md-12 text-center title-gutter">
         <span class="title">Schedule</span>
