Update Name and day button in Schedule Section

--- a/index.html
+++ b/index.html
@@ -491,13 +491,13 @@
     </div>
     <div class="row tab-gutter">
       <div class="col-md-3 text-center">
-        <div class="tab" onclick="toggleSchedule(1)">
+        <div class="tab active" onclick="toggleSchedule(1)" id="button-day1">
           <div class="date">July 28</div>
           <div class="day">Day 1</div>
         </div>
       </div>
       <div class="col-md-3 text-center">
-        <div class="tab" onclick="toggleSchedule(2)">
+        <div class="tab" onclick="toggleSchedule(2)" id="button-day2">
           <div class="date">July 29</div>
           <div class="day">Day 2</div>
         </div>
@@ -705,7 +705,7 @@
                 <span class="time">4:45 PM</span>
               </div>
               <div class="title"> Keynote: Animating Vue</div>
-              <div class="speaker-name">Sarah</div>
+              <div class="speaker-name">Sarah Drasner</div>
               <!-- <div class="speaker-bio">In this talk I will demonstrate In this talk I will demonstrate In this talk I will demonstrate In this talk
                 I will demonstrate In this talk I will demonstrate</div> -->
             </div>
@@ -741,7 +741,7 @@
                 <span class="time">9:15 AM</span>
               </div>
               <div class="title"> JavaScript engines - how do they even?</div>
-              <div class="speaker-name">Fransica</div>
+              <div class="speaker-name">Franziska Hinkelmann</div>
               <!-- <div class="speaker-bio">In this talk I will demonstrate In this talk I will demonstrate In this talk I will demonstrate In this talk
                 I will demonstrate In this talk I will demonstrate</div> -->
             </div>
@@ -809,7 +809,7 @@
                 <span class="time">11:30 AM</span>
               </div>
               <div class="title"> Super-charged Developer Tools for React Native</div>
-              <div class="speaker-name">Parushram</div>
+              <div class="speaker-name">Parashuram N</div>
               <!-- <div class="speaker-bio">In this talk I will demonstrate In this talk I will demonstrate In this talk I will demonstrate In this talk
                 I will demonstrate In this talk I will demonstrate</div> -->
             </div>
@@ -826,7 +826,7 @@
                 <span class="time">12:00 PM</span>
               </div>
               <div class="title"> Open Web, Open Source, Open Communities</div>
-              <div class="speaker-name">Shubheksha</div>
+              <div class="speaker-name">Shubheksha Jalan</div>
               <!-- <div class="speaker-bio">In this talk I will demonstrate In this talk I will demonstrate In this talk I will demonstrate In this talk
                 I will demonstrate In this talk I will demonstrate</div> -->
             </div>
@@ -860,7 +860,7 @@
                 <span class="time">2:00 PM</span>
               </div>
               <div class="title"> U&amp;I with React: On building modular, scalable and extendable UI components for you and I.</div>
-              <div class="speaker-name">Farhad</div>
+              <div class="speaker-name">Farhad Ghayour</div>
               <!-- <div class="speaker-bio">In this talk I will demonstrate In this talk I will demonstrate In this talk I will demonstrate In this talk
                 I will demonstrate In this talk I will demonstrate</div> -->
             </div>
@@ -894,7 +894,7 @@
                 <span class="time">4:15 PM</span>
               </div>
               <div class="title"> Keynote</div>
-              <div class="speaker-name">Andrew</div>
+              <div class="speaker-name">Andrew Clark</div>
               <!-- <div class="speaker-bio">In this talk I will demonstrate In this talk I will demonstrate In this talk I will demonstrate In this talk
                 I will demonstrate In this talk I will demonstrate</div> -->
             </div>
