Add new Speakers

--- a/index.html
+++ b/index.html
@@ -365,6 +365,132 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="speaker col-xs-12 col-md-4 col-sm-4">
+        <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+          <img src="assets/VarshaSaha.jpg" class="img-circle img-responsive">
+        </div>
+        <div class="bio col-md-6 col-xs-12">
+          <h3>Varsha Saha</h3>
+          <p>Front End engineer @Flipkart. JS enthusiast, tea addict and a shopoholic!</p>
+        </div>
+        <div class="social-icons col-xs-12 col-md-12">
+          <!-- <a href="https://www.linkedin.com/in/fhinkel/" target="_blank">
+            <span class="icon linkedin"></span>
+          </a> -->
+          <a target="_blank" href="https://twitter.com/saha_varsha" target="_blank">
+            <span class="icon twitter"></span>
+          </a>
+          <!-- <a href="https://github.com/fhinkel" target="_blank">
+            <span class="icon github"></span>
+          </a> -->
+        </div>
+      </div>
+
+      <div class="speaker col-xs-12 col-md-4 col-sm-4">
+        <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+          <img src="assets/MukulJain.jpg" class="img-circle img-responsive">
+        </div>
+        <div class="bio col-md-6 col-xs-12">
+          <h3>Mukul Jain</h3>
+          <p>Technology specialist #nodejs #meteor #angularjs #d3js and Blogger @nodexperts. Speaker at MeteorNoida and JSFusion community. A movie Geek.</p>
+        </div>
+        <div class="social-icons col-xs-12 col-md-12">
+          <!-- <a href="https://www.linkedin.com/in/axemclion/" target="_blank">
+            <span class="icon linkedin"></span>
+          </a> -->
+          <a target="_blank" href="https://twitter.com/mukul1904" target="_blank">
+            <span class="icon twitter"></span>
+          </a>
+          <!-- <a href="https://github.com/axemclion" target="_blank">
+            <span class="icon github"></span>
+          </a> -->
+        </div>
+      </div>
+      <div class="speaker col-xs-12 col-md-4 col-sm-4">
+        <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+          <img src="assets/vincirufus.jpg" class="img-circle img-responsive">
+        </div>
+        <div class="bio col-md-6 col-xs-12">
+          <h3>Vinci Rufus</h3>
+          <p>Sr. Director SapientRazorfish and a Google Developer Expert</p>
+        </div>
+        <div class="social-icons col-xs-12 col-md-12">
+          <!-- <a href="https://www.linkedin.com/in/max-stoiber-46698678/" target="_blank">
+            <span class="icon linkedin"></span>
+          </a> -->
+          <a href="https://twitter.com/areai51" target="_blank">
+            <span class="icon twitter"></span>
+          </a>
+          <!-- <a href="https://github.com/mxstbr" target="_blank">
+            <span class="icon github"></span>
+          </a> -->
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="speaker col-xs-12 col-md-4 col-sm-4">
+        <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+          <img src="assets/Siddharth.jpg" class="img-circle img-responsive">
+        </div>
+        <div class="bio col-md-6 col-xs-12">
+          <h3>Siddharth Kshetrapal</h3>
+          <p>Physics graduate,♥️ interfaces, javascript & web performance . javascript architect @practo, noob surfer</p>
+        </div>
+        <div class="social-icons col-xs-12 col-md-12">
+          <!-- <a href="https://www.linkedin.com/in/fhinkel/" target="_blank">
+            <span class="icon linkedin"></span>
+          </a> -->
+          <a target="_blank" href="https://twitter.com/siddharthkp" target="_blank">
+            <span class="icon twitter"></span>
+          </a>
+          <!-- <a href="https://github.com/fhinkel" target="_blank">
+            <span class="icon github"></span>
+          </a> -->
+        </div>
+      </div>
+
+      <div class="speaker col-xs-12 col-md-4 col-sm-4">
+        <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+          <img src="assets/JaiSanthosh.png" class="img-circle img-responsive">
+        </div>
+        <div class="bio col-md-6 col-xs-12">
+          <h3>Jai Santhosh</h3>
+          <p>Lead Engineer at ClearTax, helping build a bunch of Finance Tech software with innovative solutions around GST, Income Tax, etc.</p>
+        </div>
+        <div class="social-icons col-xs-12 col-md-12">
+          <!-- <a href="https://www.linkedin.com/in/axemclion/" target="_blank">
+            <span class="icon linkedin"></span>
+          </a> -->
+          <a target="_blank" href="https://twitter.com/jaisanth" target="_blank">
+            <span class="icon twitter"></span>
+          </a>
+          <!-- <a href="https://github.com/axemclion" target="_blank">
+            <span class="icon github"></span>
+          </a> -->
+        </div>
+      </div>
+      <div class="speaker col-xs-12 col-md-4 col-sm-4">
+        <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+          <img src="assets/sanketsahu.jpg" class="img-circle img-responsive">
+        </div>
+        <div class="bio col-md-6 col-xs-12">
+          <h3>Sanket Sahu</h3>
+          <p>Co-author of @NativeBaseIO, Co-founded @GeekyAnts. OSS for life!</p>
+        </div>
+        <div class="social-icons col-xs-12 col-md-12">
+          <!-- <a href="https://www.linkedin.com/in/max-stoiber-46698678/" target="_blank">
+            <span class="icon linkedin"></span>
+          </a> -->
+          <a href="https://twitter.com/sanketsahu" target="_blank">
+            <span class="icon twitter"></span>
+          </a>
+          <!-- <a href="https://github.com/mxstbr" target="_blank">
+            <span class="icon github"></span>
+          </a> -->
+        </div>
+      </div>
+    </div>
     <div class="container-margin-bottom"></div>
   </div>
   <div class="container description">
