Update Farhad title

--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
                   </span>
                 <span class="time">2:00 PM</span>
               </div>
-              <div class="title"> U&amp;I with React: On building modular, scalable and extendable UI components for you and I.</div>
+              <div class="title"> U&amp;I with React - UI components for you and I.</div>
               <div class="speaker-name">Farhad Ghayour</div>
               <!-- <div class="speaker-bio">In this talk I will demonstrate In this talk I will demonstrate In this talk I will demonstrate In this talk
                 I will demonstrate In this talk I will demonstrate</div> -->
