Add Rahul Rout in speaker list

--- a/index.html
+++ b/index.html
@@ -386,20 +386,19 @@
           </a> -->
         </div>
       </div>
-
       <div class="speaker col-xs-12 col-md-4 col-sm-4">
         <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
-          <img src="assets/MukulJain.jpg" class="img-circle img-responsive">
+          <img src="assets/rahul.jpg" class="img-circle img-responsive">
         </div>
         <div class="bio col-md-6 col-xs-12">
-          <h3>Mukul Jain</h3>
-          <p>Technology specialist #nodejs #meteor #angularjs #d3js and Blogger @nodexperts. Speaker at MeteorNoida and JSFusion community. A movie Geek.</p>
+          <h3>Rahul Rout</h3>
+          <p>Senior Developer at Walmart, data visualization enthusiast with the Analytics team in Bangalore, collaborated with various enthusiasts to create youtube web series on Electron</p>
         </div>
         <div class="social-icons col-xs-12 col-md-12">
           <!-- <a href="https://www.linkedin.com/in/axemclion/" target="_blank">
             <span class="icon linkedin"></span>
           </a> -->
-          <a target="_blank" href="https://twitter.com/mukul1904" target="_blank">
+          <a target="_blank" href="https://twitter.com/routbuzz" target="_blank">
             <span class="icon twitter"></span>
           </a>
           <!-- <a href="https://github.com/axemclion" target="_blank">
@@ -486,6 +485,28 @@
             <span class="icon twitter"></span>
           </a>
           <!-- <a href="https://github.com/mxstbr" target="_blank">
+            <span class="icon github"></span>
+          </a> -->
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="speaker col-xs-12 col-md-4 col-sm-4">
+        <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+          <img src="assets/MukulJain.jpg" class="img-circle img-responsive">
+        </div>
+        <div class="bio col-md-6 col-xs-12">
+          <h3>Mukul Jain</h3>
+          <p>Technology specialist #nodejs #meteor #angularjs #d3js and Blogger @nodexperts. Speaker at MeteorNoida and JSFusion community. A movie Geek.</p>
+        </div>
+        <div class="social-icons col-xs-12 col-md-12">
+          <!-- <a href="https://www.linkedin.com/in/axemclion/" target="_blank">
+            <span class="icon linkedin"></span>
+          </a> -->
+          <a target="_blank" href="https://twitter.com/mukul1904" target="_blank">
+            <span class="icon twitter"></span>
+          </a>
+          <!-- <a href="https://github.com/axemclion" target="_blank">
             <span class="icon github"></span>
           </a> -->
         </div>
