--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
         <div class="col-md-4 tickets-types-col">
           <div class="text">JS ENTHUSIAST</div>
           <div class="price-box">
-            <span class="price-text">₹</span>
-            <span class="price-text">6000</span>
+            <span class="price-text disabled">₹</span>
+            <span class="price-text disabled">6000</span>
           </div>
-          <a href="https://www.townscript.com/e/jschannel-2017-013314/booking" target="_blank">
-            <div class="btn price-btn">
-              <span>BUY NOW</span>
+          <a>
+            <div class="btn price-btn disabled">
+              <span>SOLD OUT</span>
             </div>
           </a>
         </div>
