Add Farhad Ghayour in speaker section

--- a/index.html
+++ b/index.html
@@ -232,7 +232,6 @@
     </div>
     <div class="container-margin-top"></div>
     <div class="row">
-
       <div class="speaker col-xs-12 col-md-4 col-sm-4">
         <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
           <img src="assets/preethi.jpeg" class="img-circle img-responsive">
@@ -254,7 +253,6 @@
           </a>
         </div>
       </div>
-
       <div class="speaker col-xs-12 col-md-4 col-sm-4">
         <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
           <img src="assets/sarah.jpg" class="img-circle img-responsive">
@@ -280,7 +278,6 @@
           </a>
         </div>
       </div>
-
       <div class="speaker col-xs-12 col-md-4 col-sm-4">
         <div class="col-md-6 col-md-offset-0 col-xs-6 col-xs-offset-3">
           <img src="assets/andrew.jpg" class="img-circle img-responsive">
@@ -321,7 +318,6 @@
           </a>
         </div>
       </div>
-
       <div class="speaker col-xs-12 col-md-4 col-sm-4">
         <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
           <img src="assets/parshuram.jpeg" class="img-circle img-responsive">
@@ -368,17 +364,17 @@
     <div class="row">
       <div class="speaker col-xs-12 col-md-4 col-sm-4">
         <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
-          <img src="assets/VarshaSaha.jpg" class="img-circle img-responsive">
+          <img src="assets/farhad.jpg" class="img-circle img-responsive">
         </div>
         <div class="bio col-md-6 col-xs-12">
-          <h3>Varsha Saha</h3>
-          <p>Front End engineer @Flipkart. JS enthusiast, tea addict and a shopoholic!</p>
+          <h3>Farhad Ghayour</h3>
+          <p>Philosopher, entrepreneur, software engineer with a passion for technology, education &amp; the arts.</p>
         </div>
         <div class="social-icons col-xs-12 col-md-12">
           <!-- <a href="https://www.linkedin.com/in/fhinkel/" target="_blank">
             <span class="icon linkedin"></span>
           </a> -->
-          <a target="_blank" href="https://twitter.com/saha_varsha" target="_blank">
+          <a target="_blank" href="https://twitter.com/farhadg_com" target="_blank">
             <span class="icon twitter"></span>
           </a>
           <!-- <a href="https://github.com/fhinkel" target="_blank">
@@ -408,20 +404,20 @@
       </div>
       <div class="speaker col-xs-12 col-md-4 col-sm-4">
         <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
-          <img src="assets/vincirufus.jpg" class="img-circle img-responsive">
+          <img src="assets/VarshaSaha.jpg" class="img-circle img-responsive">
         </div>
         <div class="bio col-md-6 col-xs-12">
-          <h3>Vinci Rufus</h3>
-          <p>Sr. Director SapientRazorfish and a Google Developer Expert</p>
+          <h3>Varsha Saha</h3>
+          <p>Front End engineer @Flipkart. JS enthusiast, tea addict and a shopoholic!</p>
         </div>
         <div class="social-icons col-xs-12 col-md-12">
-          <!-- <a href="https://www.linkedin.com/in/max-stoiber-46698678/" target="_blank">
+          <!-- <a href="https://www.linkedin.com/in/fhinkel/" target="_blank">
             <span class="icon linkedin"></span>
           </a> -->
-          <a href="https://twitter.com/areai51" target="_blank">
+          <a target="_blank" href="https://twitter.com/saha_varsha" target="_blank">
             <span class="icon twitter"></span>
           </a>
-          <!-- <a href="https://github.com/mxstbr" target="_blank">
+          <!-- <a href="https://github.com/fhinkel" target="_blank">
             <span class="icon github"></span>
           </a> -->
         </div>
@@ -448,7 +444,6 @@
           </a> -->
         </div>
       </div>
-
       <div class="speaker col-xs-12 col-md-4 col-sm-4">
         <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
           <img src="assets/JaiSanthosh.png" class="img-circle img-responsive">
@@ -491,6 +486,26 @@
       </div>
     </div>
     <div class="row">
+      <div class="speaker col-xs-12 col-md-4 col-sm-4">
+        <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+          <img src="assets/vincirufus.jpg" class="img-circle img-responsive">
+        </div>
+        <div class="bio col-md-6 col-xs-12">
+          <h3>Vinci Rufus</h3>
+          <p>Sr. Director SapientRazorfish and a Google Developer Expert</p>
+        </div>
+        <div class="social-icons col-xs-12 col-md-12">
+          <!-- <a href="https://www.linkedin.com/in/max-stoiber-46698678/" target="_blank">
+            <span class="icon linkedin"></span>
+          </a> -->
+          <a href="https://twitter.com/areai51" target="_blank">
+            <span class="icon twitter"></span>
+          </a>
+          <!-- <a href="https://github.com/mxstbr" target="_blank">
+            <span class="icon github"></span>
+          </a> -->
+        </div>
+      </div>
       <div class="speaker col-xs-12 col-md-4 col-sm-4">
         <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
           <img src="assets/MukulJain.jpg" class="img-circle img-responsive">
