Add farhad's bio

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         </div>
         <div class="bio col-md-6 col-xs-12">
           <h3>Farhad Ghayour</h3>
-          <p>Philosopher, entrepreneur, software engineer with a passion for technology, education &amp; the arts.</p>
+          <p>Consultant <a href="https://twitter.com/McKinsey" target="_blank">@McKinsey</a>. Formerly @ Famous as a core contributor to their 3D rendering engine. Loves philosophy, art, math, and code.</p>
         </div>
         <div class="social-icons col-xs-12 col-md-12">
           <!-- <a href="https://www.linkedin.com/in/fhinkel/" target="_blank">
