--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-  <a href="https://www.youtube.com/watch?v=3Rmjqsz-txM" target="_blank">
+  <a href="https://www.youtube.com/watch?v=PM38nnInUOI" target="_blank">
   <div class="live-section">
     <img src="./images/live.gif" width="40px"/> We are live now <i class="fa fa-youtube-play" aria-hidden="true"></i> <img src="./images/youtube.png" width="40px"/>
   </div>
