Update the video link

--- a/index.html
+++ b/index.html
@@ -48,11 +48,9 @@
 </head>
 
 <body>
-  <a href="https://www.youtube.com/watch?v=PM38nnInUOI" target="_blank">
   <div class="live-section">
-    <img src="./images/live.gif" width="40px"/> We are live now <i class="fa fa-youtube-play" aria-hidden="true"></i> <img src="./images/youtube.png" width="40px"/>
+    In case you missed it, watch <a href="https://www.youtube.com/watch?v=3Rmjqsz-txM" target="_blank">Day 1</a> and <a href="https://www.youtube.com/watch?v=PM38nnInUOI" target="_blank">Day 2</a> <i class="fa fa-youtube-play" aria-hidden="true"></i> <img src="./images/youtube.png" width="40px"/>
   </div>
-  </a>
   <nav class="navbar navbar-default navbar-static-top">
     <div class="container">
       <div class="navbar-header">
